Thu Jun  6 20:40:17 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Invoke RUBY_REPLACE_TYPE for size_t.
	  Don't invoke RUBY_CHECK_PRINTF_PREFIX for size_t to avoid conflict
	  with RUBY_REPLACE_TYPE.

	* internal.h (rb_absint_size): Declared.
	  (rb_absint_size_in_word): Ditto.
	  (rb_int_export): Ditto.

	* bignum.c (rb_absint_size): New function.
	  (rb_absint_size_in_word): Ditto.
	  (int_export_fill_dd): Ditto.
	  (int_export_take_lowbits): Ditto.
	  (rb_int_export): Ditto.

	* pack.c (pack_pack): Use rb_int_export for BER compressed integer.

Thu Jun  6 19:31:33 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: fixed coding error [ruby-core:55337].
	  reported by Riley Lynch.

Thu Jun  6 14:16:37 2013  Narihiro Nakamura  <authornari@gmail.com>

	* ext/objspace/object_tracing.c: rename allocation_info to
	  lookup_allocation_info. At times I confused "struct
	  allocation_info" with "function allocation_info".

Thu Jun  6 13:57:06 2013  Narihiro Nakamura  <authornari@gmail.com>

	* ext/objspace/object_tracing.c: allocation_info function isn't
	  called by any other file.

Thu Jun  6 09:41:00 2013  Kenta Murata  <mrkn@cookpad.com>

	* numeric.c (num_quo): should return a Float for a Float argument.
	  [ruby-dev:44710] [Bug #5515]

	* test/ruby/test_fixnum.rb: Add an assertion for the above change.

	* test/ruby/test_bignum.rb: ditto.

Thu Jun  6 00:59:44 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (gc_mark): get rid of pushing useless objects.
	* gc.c (rgengc_rememberset_mark): bypass gc_mark() in order to push
	  sunny old object at minor gc.
	* gc.c (gc_mark_children): move sunny old check to gc_mark().
	* gc.c (rgengc_check_shady): remove DEMOTE that already unnecessary.
	* gc.c (rb_gc_writebarrier): ditto.

	  change sunny old check point in order to save mark stack and
	  remove unnatural rest_sweep & demote.

Thu Jun  6 00:52:42 2013  Masaya Tarui  <tarui@ruby-lang.org>
